handbook/versioned_docs/version-3.0/description.mdx
---
id: description
title: 说明
slug: /
---

---
:::tip 新课程公告！！！

**C# TouchSocket 网络通信开发课程正式上线啦！**

n多课时系统讲解TCP/IP协议原理、Socket编程核心技术。涵盖开发环境搭建、插件机制、12种消息适配器实战，含企业级聊天系统案例（更新中）。支持多端学习。适合零基础开发者及技术进阶人群。

立即报名：[课程链接](https://www.bilibili.com/cheese/play/ss489296905)


特此公告。

:::  
---

## 使用前必要阅读

TouchSocket 由作者若汝棋茗及其他贡献者开发，所有版权归作者若汝棋茗所有，程序集源代码在遵循 Apache License 2.0 的开源协议以及**附加协议**下，可**免费**供其他开发者二次开发或（商业）使用。

包含以下组件：

- [![NuGet version (TouchSocket.Core)](https://img.shields.io/nuget/v/TouchSocket.Core.svg?label=TouchSocket.Core)](https://www.nuget.org/packages/TouchSocket.Core)
- [![NuGet version (TouchSocket.Core.DependencyInjection)](https://img.shields.io/nuget/v/TouchSocket.Core.DependencyInjection.svg?label=TouchSocket.Core.DependencyInjection)](https://www.nuget.org/packages/TouchSocket.Core.DependencyInjection)
- [![NuGet version (TouchSocket.Core.Autofac)](https://img.shields.io/nuget/v/TouchSocket.Core.Autofac.svg?label=TouchSocket.Core.Autofac)](https://www.nuget.org/packages/TouchSocket.Core.Autofac)
- [![NuGet version (TouchSocket)](https://img.shields.io/nuget/v/TouchSocket.svg?label=TouchSocket)](https://www.nuget.org/packages/TouchSocket)
- [![NuGet version (TouchSocket.Http)](https://img.shields.io/nuget/v/TouchSocket.Http.svg?label=TouchSocket.Http)](https://www.nuget.org/packages/TouchSocket.Http)
- [![NuGet version (TouchSocket.NamedPipe)](https://img.shields.io/nuget/v/TouchSocket.NamedPipe.svg?label=TouchSocket.NamedPipe)](https://www.nuget.org/packages/TouchSocket.NamedPipe)
- [![NuGet version (TouchSocket.Rpc)](https://img.shields.io/nuget/v/TouchSocket.Rpc.svg?label=TouchSocket.Rpc)](https://www.nuget.org/packages/TouchSocket.Rpc)
- [![NuGet version (TouchSocket.Dmtp)](https://img.shields.io/nuget/v/TouchSocket.Dmtp.svg?label=TouchSocket.Dmtp)](https://www.nuget.org/packages/TouchSocket.Dmtp)
- [![NuGet version (TouchSocket.JsonRpc)](https://img.shields.io/nuget/v/TouchSocket.JsonRpc.svg?label=TouchSocket.JsonRpc)](https://www.nuget.org/packages/TouchSocket.JsonRpc)
- [![NuGet version (TouchSocket.XmlRpc)](https://img.shields.io/nuget/v/TouchSocket.XmlRpc.svg?label=TouchSocket.XmlRpc)](https://www.nuget.org/packages/TouchSocket.XmlRpc)
- [![NuGet version (TouchSocket.WebApi)](https://img.shields.io/nuget/v/TouchSocket.WebApi.svg?label=TouchSocket.WebApi)](https://www.nuget.org/packages/TouchSocket.WebApi)
- [![NuGet version (TouchSocket.WebApi.Swagger)](https://img.shields.io/nuget/v/TouchSocket.WebApi.Swagger.svg?label=TouchSocket.WebApi.Swagger)](https://www.nuget.org/packages/TouchSocket.WebApi.Swagger)
- [![NuGet version (TouchSocket.Hosting)](https://img.shields.io/nuget/v/TouchSocket.Hosting.svg?label=TouchSocket.Hosting)](https://www.nuget.org/packages/TouchSocket.Hosting)
- [![NuGet version (TouchSocket.AspNetCore)](https://img.shields.io/nuget/v/TouchSocket.AspNetCore.svg?label=TouchSocket.AspNetCore)](https://www.nuget.org/packages/TouchSocket.AspNetCore)
- [![NuGet version (TouchSocket.Modbus)](https://img.shields.io/nuget/v/TouchSocket.Modbus.svg?label=TouchSocket.Modbus)](https://www.nuget.org/packages/TouchSocket.Modbus)

:::tip 提示

即所有以“TouchSocket”开头的Nuget包，均已完全开源，个人、商用均可完全免费使用。

:::  

# Apache License 2.0 开源协议简述

- 永久权利
- 一旦被授权，永久拥有。
- 全球范围的权利
- 在一个国家获得授权，适用于所有国家。假如你在美国，许可是从印度授权的，也没有问题。
- 授权免费，且无版税
- 前期，后期均无任何费用。
- 授权无排他性
- 任何人都可以获得授权
- 授权不可撤消
- 一旦获得授权，没有任何人可以取消。比如，你基于该产品代码开发了衍生产品，你不用担心会在某一天被禁止使用该代码。

# 附加协议

<a name="qLp3q"></a>

### 个人使用须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- 不得擦除程序集所有有关作者的信息。

:::caution 警告

以上内容必须全部符合，个人使用授权才成立。

:::  

### 二次开发须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- 不得擦除程序集所有有关作者的信息。
- 二次开发完成后的作品必须附带源作品所有作者信息，包括但不限于作者名、Gitee、Github 地址等。
- ~~**完成后**的作品（仅 TouchSocket 部分）必须将发布时最新源代码提交一份给本作者，QQ 邮箱：505554090@qq.com~~。

:::caution 警告

以上内容必须全部符合，二次开发授权才成立。

:::  

### 盈利性（商业）用途使用须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- **不得擦除程序集所有有关作者的信息。**

:::caution 警告

以上内容必须全部符合，使用授权才成立。

:::  

:::tip 建议

TouchSocket核心部分都是开源免费的，所以我们希望当它帮到您的时候，您也能帮TouchSocket多多宣传。例如：可以在用户可见界面进行提名感谢等。

:::  

## TouchSocketPro 系商用许可

`TouchSocketPro`系是`TouchSocket`的Pro，其 99%功能与`TouchSocket`一致。所有版权归作者若汝棋茗所有。

包含以下组件：

- [![NuGet version (TouchSocketPro)](https://img.shields.io/nuget/v/TouchSocketPro.svg?label=TouchSocketPro)](https://www.nuget.org/packages/TouchSocketPro)
- [![NuGet version (TouchSocketPro.Dmtp)](https://img.shields.io/nuget/v/TouchSocketPro.Dmtp.svg?label=TouchSocketPro.Dmtp)](https://www.nuget.org/packages/TouchSocketPro.Dmtp)
- [![NuGet version (TouchSocketPro.AspNetCore)](https://img.shields.io/nuget/v/TouchSocketPro.AspNetCore.svg?label=TouchSocketPro.AspNetCore)](https://www.nuget.org/packages/TouchSocketPro.AspNetCore)
- [![NuGet version (TouchSocketPro.Modbus)](https://img.shields.io/nuget/v/TouchSocketPro.Modbus.svg?label=TouchSocketPro.Modbus)](https://www.nuget.org/packages/TouchSocketPro.Modbus)

:::tip 提示

即所有以“TouchSocketPro”开头的Nuget包，这可能需要授权才可以使用。

:::  

### TouchSocketPro 功能部分遵循：

- 限时（1h）免费测试，测试期间可参与商业使用。
- 付费使用，购买后还须遵循相关使用协议，详情咨询若汝棋茗。

**`TouchSocketPro`程序集源代码不公开开源，需要付费购买。**

# 免责申明

**在使用`TouchSocket`**或**`TouchSocketPro`之前请进行缜密的测试。在使用期间，由本程序集造成或间接造成的所有损失，均自己承担，与本程序集无关。**
